# UnhookingPatch

./: .gitignore  CMakeLists.txt  README.md
PatchingAPI/: CMakeLists.txt  PatchingAPI.cpp  PatchingAPI.sln  PatchingAPI.vcxproj  PatchingAPI.vcxproj.filters
PatchingAPI/src/: PatchingAPI.cpp
tools/: bin2mac.py  calc.bin.c
